# zspire

./: LICENSE  README.md  ZSpire-Framework.sln
ZSpire Demo/: CMakeLists.txt  ZSpire Demo.vcxproj  ZSpire Demo.vcxproj.filters
ZSpire Demo/shaders/: object.fs  object.vs
ZSpire Demo/shaders/deffered/: lighting.fs  lighting.vs  object.fs
ZSpire Demo/shaders/text/: text2d.fs  text2d.vs
ZSpire Demo/shaders/ui/: ui.fs  ui.vs
ZSpire Demo/src/: demo.cpp
ZSpire Demo/text/: glyph48.DDS  glyph48.fnt
ZSpire Scene Editor/: CMakeLists.txt  ZSpire Scene Editor.vcxproj  ZSpire Scene Editor.vcxproj.filters  editor.ini  imgui.ini  scene_editor.cpp
ZSpire Scene Editor/includes/: DColor.h  DMath.h  GameObject.h  Light.h  Material.h  Resources.h  file_window.h  geometry.h  objects_window.h  pdem_loader.h  property_inspector.h  resources_window.h  scene_loader.h  startup_window.h  zs-camera.h  zs-math.h  zs-mesh-loader.h  zs-mesh.h  zs-shader.h  zs-texture.h  zs-transform.h
ZSpire Scene Editor/lib/: CMakeLists.txt
ZSpire Scene Editor/lib/includes/: Camera.hpp  GameObject.h  Light.h  Renderer.h  property_inspector.h  scene_loader.h  zs-mesh.h  zs-texture.h
ZSpire Scene Editor/lib/src/: GameObject.cpp  Light.cpp  Renderer.cpp  Resources.cpp  file_window.cpp  imgui_impl_sdl_gl3.cpp  objects_window.cpp  property_inspector.cpp  scene_loader.cpp  startup_window.cpp  zs-math.cpp  zs-mesh.cpp  zs-shader.cpp  zs-texture.cpp
ZSpire Scene Editor/shaders/: object.fs  object.vs
ZSpire Scene Editor/shaders/text/: text2d.fs  text2d.vs
ZSpire Scene Editor/src/: DColor.cpp  DMath.cpp  GameObject.cpp  Light.cpp  Material.cpp  Renderer.cpp  Resources.cpp  file_window.cpp  geometry.cpp  imgui_impl_sdl_gl3.cpp  objects_window.cpp  pdem_loader.cpp  property_inspector.cpp  resources_window.cpp  scene_editor.cpp  scene_loader.cpp  startup_window.cpp  zs-camera.cpp  zs-math.cpp  zs-mesh-loader.cpp  zs-shader.cpp  zs-texture.cpp  zs-transform.cpp
ZSpire-Framework/: CMakeCache.txt  CMakeLists.txt  ZSpire-Framework.vcxproj  ZSpire-Framework.vcxproj.filters
ZSpire-Framework/includes/: zs-app.h  zs-audio-manager.h  zs-audio-source.h  zs-base-structs.h  zs-camera.h  zs-deffered-render.h  zs-errors-checker.h  zs-forward-render.h  zs-game-object.h  zs-input.h  zs-light.h  zs-logger.h  zs-math.h  zs-mesh-loader.h  zs-mesh.h  zs-resource.h  zs-scene.h  zs-settings.h  zs-shader.h  zs-text-renderer.h  zs-texture.h  zs-transform.h  zs-ui.h  zs-vulkan.h  zspire.h
ZSpire-Framework/src/: zs-app.cpp  zs-audio-manager.cpp  zs-audio-source.cpp  zs-camera.cpp  zs-deffered-render.cpp  zs-errors-checker.cpp  zs-forward-render.cpp  zs-game-object.cpp  zs-input.cpp  zs-light.cpp  zs-logger.cpp  zs-math.cpp  zs-mesh-loader.cpp  zs-mesh.cpp  zs-scene.cpp  zs-shader.cpp  zs-text-renderer.cpp  zs-texture.cpp  zs-transform.cpp  zs-ui.cpp  zs-vulkan.cpp
