CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(ZSpireEditor)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "../ZSpire-Framework/cmake")

FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(ASSIMP REQUIRED)

INCLUDE_DIRECTORIES(
	${SDL2_INCLUDE_DIR}
	${OPENGL_INCLUDE_DIR}
	${GLEW_INCLUDE_DIRS}
	${ASSIMP_INCLUDE_DIRS}
	lib/includes)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fpermissive")

ADD_EXECUTABLE(main
	src/scene_editor.cpp)

ADD_LIBRARY(framework STATIC IMPORTED)
SET_TARGET_PROPERTIES(framework PROPERTIES
	IMPORTED_LOCATION ./lib/libZSpireEditorLib.a)

TARGET_LINK_LIBRARIES(
	main framework
	${SDL2_LIBRARY}
	${OPENGL_LIBRARY}
	${GLEW_LIBRARIES}
	${ASSIMP_LIBRARIES})
